# OwlParsers

./: CMakeLists.txt  LICENSE  README.md
include/owl/: HtmlParser.h  Parser.h
src/: CMakeLists.txt  HtmlParser.cpp  MyClass.cpp
test/: CMakeLists.txt  test_HtmlParser.cpp  test_MyClass.cpp
